community/lists/devel/att-10271/mpi-type-mismatch-diagnostics.txt
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:10:21: error: attribute requires exactly 2 arguments
    __attribute__(( mpi_typed_arg )); // expected-error {{attribute requires exactly 2 arguments}}
                    ^
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:13:21: error: 'mpi_typed_arg' attribute parameter 1 is out of bounds
    __attribute__(( mpi_typed_arg(0,7) )); // expected-error {{attribute parameter 1 is out of bounds}}
                    ^             ~
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:16:21: error: 'mpi_typed_arg' attribute parameter 1 is out of bounds
    __attribute__(( mpi_typed_arg(5,7) )); // expected-error {{attribute parameter 1 is out of bounds}}
                    ^             ~
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:19:21: error: 'mpi_typed_arg' attribute parameter 2 is out of bounds
    __attribute__(( mpi_typed_arg(3,0) )); // expected-error {{attribute parameter 2 is out of bounds}}
                    ^               ~
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:22:21: error: 'mpi_typed_arg' attribute parameter 2 is out of bounds
    __attribute__(( mpi_typed_arg(3,5) )); // expected-error {{attribute parameter 2 is out of bounds}}
                    ^               ~
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:27:21: error: 'mpi_typed_arg' attribute requires parameter 1 to be an integer constant
    __attribute__(( mpi_typed_arg((x+1),7) )); // expected-error {{attribute requires parameter 1 to be an integer constant}}
                    ^             ~~~~~
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:30:21: error: 'mpi_typed_arg' attribute requires parameter 2 to be an integer constant
    __attribute__(( mpi_typed_arg(3,x) )); // expected-error {{attribute requires parameter 2 to be an integer constant}}
                    ^               ~
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:32:34: error: 'mpi_typed_arg' attribute only applies to functions and methods
int MPI_Wrong8() __attribute__(( mpi_typed_arg(1,3) )); // expected-error {{attribute only applies to functions and methods}}
                                 ^
MPITypedArgAttr1 3
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:45:74: error: attribute takes one argument
extern struct ompi_predefined_datatype_t ompi_mpi_wrong1 __attribute__(( mpi_datatype )); // expected-error {{attribute takes one argument}}
                                                                         ^
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:46:74: error: attribute takes one argument
extern struct ompi_predefined_datatype_t ompi_mpi_wrong2 __attribute__(( mpi_datatype(1,2) )); // expected-error {{attribute takes one argument}}
                                                                         ^
handleMPIDatatypeAttr err1
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:61:12: warning: actual buffer element type 'long' doesn't match specified MPI_Datatype [-Wmpi]
  MPI_Send(long_buf, 1, MPI_INT, 1, 1, MPI_COMM_WORLD); // expected-warning {{actual buffer element type 'long' doesn't match specified MPI_Datatype}}
           ^~~~~~~~     ~~~~~~~
../../../llvm/tools/clang/test/Sema/warn-mpi-type-mismatch.c:71:12: warning: actual buffer element type 'long' doesn't match specified MPI_Datatype [-Wmpi]
  MPI_Send(long_buf, 1, my_int_type, 1, 1, MPI_COMM_WORLD); // expected-warning {{actual buffer element type 'long' doesn't match specified MPI_Datatype}}
           ^~~~~~~~     ~~~~~~~~~~~
2 warnings and 10 errors generated.
